syntax = "proto3";
package fairyring.keyshare;

option go_package = "github.com/Fairblock/fairyring/x/keyshare/types";

message KeyShareRequest {
    string identity                  = 1;
    string pubkey                    = 2;
    IBCInfo ibc_info                 = 3;
    CounterPartyIBCInfo counterparty = 4;
    string aggr_keyshare             = 5;
    string proposal_id               = 6;
    bool sent                        = 7;
}

message IBCInfo {
    string ClientID = 1;
    string ConnectionID = 2;
    string ChannelID = 3;
    string PortID = 4;
}

message CounterPartyIBCInfo {
    string ClientID = 1;
    string ConnectionID = 2;
    string ChannelID = 3;
    string PortID = 4;
}